--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.21.2",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "gitmoji-cli": "^9.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
