--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "classnames": "^2.5.1",
     "gitmoji-cli": "^9.4.0",
     "google-protobuf": "^3.21.4",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "sass": "^1.79.4"
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/google-protobuf": "^3.15.12",
+    "@types/leaflet": "^1.9.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
